--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
