--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
