--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.7.0",
     "react-router-hash-link": "^2.4.3",
     "react-toastify": "^11.0.5",
